reschedule and phone call functionality

--- a/client/app/pgm/default_landing/index.html
+++ b/client/app/pgm/default_landing/index.html
@@ -71,7 +71,7 @@
                         <p>
                             <a class="btn btn-warning" href="#by_online" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Online Video</a>
                             <a class="btn btn-warning" href="#by_phone" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> By Phone</a>
-                            <a class="btn btn-warning" href="#by_email" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> By Email</a>
+                            <!-- <a class="btn btn-warning" href="#by_email" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> By Email</a> -->
                         </p>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                         <p>
                             <a class="btn btn-warning" href="#by_online" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Online Video</a>
                             <a class="btn btn-warning" href="#by_phone" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> By Phone</a>
-                            <a class="btn btn-warning" href="#by_email" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> By Email</a>
+                            <!-- <a class="btn btn-warning" href="#by_email" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> By Email</a> -->
                         </p>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                         <p>
                             <a class="btn btn-warning" href="#by_online" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Online Video</a>
                             <a class="btn btn-warning" href="#by_phone" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> By Phone</a>
-                            <a class="btn btn-warning" href="#by_email" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> By Email</a>
+                            <!-- <a class="btn btn-warning" href="#by_email" role="button"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> By Email</a> -->
                         </p>
 
                         
@@ -160,7 +160,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">2. Make Payment</h4>
-                        <p>Pay yourself using Credit or Debit Card. Pre-paid account also works.Anyone else can pay on your behalf too.</p>
+                        <p>Pay yourself using Credit or Debit Card. In future, someone else can pay on your behalf or you can pre-pay your account.</p>
                         <!-- <p><a class="btn btn-primary" href="#" role="button">Start &raquo;</a></p> -->
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">3. Doctor will contact you</h4>
-                        <p>Doctor will make video or phone call to you, according to your chosen mode at the time of appointment. </p>
+                        <p>Doctor will make video or phone call to you, according to your chosen mode at the time of appointment. Use your browser for video call; no extra software to install </p>
                         <!-- <p><a class="btn btn-primary" href="#" role="button">Start &raquo;</a></p> -->
                     </div>
                 </div>
@@ -230,7 +230,7 @@
                 <img class="featurette-image img-responsive" src="/img/ulanding_phone_consult.jpg" alt="Generic placeholder image" style="height:300px;"/>
             </div>
         </div>
-        <hr class="featurette-divider">
+        <!-- <hr class="featurette-divider">
         <a name="by_email" />
         <div class="row featurette">
             <div class="col-md-7">
@@ -240,7 +240,7 @@
             <div class="col-md-5">
                 <img class="featurette-image img-responsive" src="/img/ulanding_email_consult.png" alt="Generic placeholder image" style="height:300px;"/>
             </div>
-        </div>
+        </div> -->
         <hr class="featurette-divider">
         <div class="row featurette">
             <div class="col-md-7">
