--- a/client/app/provider/provider_index.html
+++ b/client/app/provider/provider_index.html
@@ -96,8 +96,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.tpl.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.3.6/angular-strap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.3.6/angular-strap.tpl.min.js"></script>
 
     <script src="/bower_components/angular-route/angular-route.min.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -115,6 +115,7 @@
     <script type="text/javascript" src="/bower_components/fullcalendar/gcal.js"></script> 
 -->
     <script src="/bower_components/holderjs/holder.js"></script>
+    <script src="/components/services/cwfservices.js"></script>
     <script src="/components/services/hmpservices.js"></script>
     <script src="/components/version/version.js"></script>
     <script src="/components/version/version-directive.js"></script>
