--- a/client/app/index.html
+++ b/client/app/index.html
@@ -61,7 +61,7 @@
 
           <!-- Jumbotron -->
           <div class="jumbotron">
-              <h1>Remedy7</h1>
+              <h1>RemedySquare</h1>
               <p class="lead">Doctor Consultation from Anywhere. Save time. Enjoy convenience of seeing doctor remotely. No unnecessary physical visit.</p>
               <!-- <p><a class="btn btn-lg btn-success" href="provider/provider_index.html" role="button">Coming Soon</a>
               </p> -->
