--- a/client/app/pgm/default_landing/index.html
+++ b/client/app/pgm/default_landing/index.html
@@ -35,7 +35,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#">Remedy7</a>
+                        <a class="navbar-brand" href="#">RemedySquare</a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav pull-right">
