--- a/client/app/pgm/provider_landing/index.html
+++ b/client/app/pgm/provider_landing/index.html
@@ -61,7 +61,7 @@
 
           <!-- Jumbotron -->
           <div class="jumbotron">
-              <h1>Remedy7</h1>
+              <h1>RemedySquare</h1>
               <p class="lead">Provide Consultation from Anywhere. Utilize Time. Help More Patients.</p>
               <p><a class="btn btn-lg btn-success" href="/provider/provider_index.html" role="button">Log In</a>
               </p>
