--- a/client/app/user/index.html
+++ b/client/app/user/index.html
@@ -42,7 +42,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="/pgm/default_landing/index.html">Remedy7</a>
+                        <a class="navbar-brand" href="/pgm/default_landing/index.html">RemedySquare</a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right" ng-if="!authFlag">
