sms functionality, patient info and  password fixes

--- a/client/app/pgm/default_landing/index.html
+++ b/client/app/pgm/default_landing/index.html
@@ -139,7 +139,7 @@
                     <div class="media-body">
                         
                                 <h4 class="media-heading">1. Setup online appointment</h4>
-                                <p>Find your doctor and set up an appointment by chosing video, phone or email consultation</p>
+                                <p>Find your doctor and set up an appointment by chosing video or phone consultation</p>
                                 <a class="btn btn-primary" href="/user/index.html" role="button">Start &raquo;</a>
                                 <!-- <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> -->
                             
@@ -179,7 +179,7 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading">3. Doctor will contact you</h4>
-                        <p>Doctor will make video or phone call to you, according to your chosen mode at the time of appointment. Use your browser for video call; no extra software to install </p>
+                        <p>Doctor will make video or phone call to you. Video call just works with browser; no extra software to install </p>
                         <!-- <p><a class="btn btn-primary" href="#" role="button">Start &raquo;</a></p> -->
                     </div>
                 </div>
