--- a/client/app/provider/croom/croom_audio.html
+++ b/client/app/provider/croom/croom_audio.html
@@ -34,7 +34,7 @@
                                     <img id="video_remote_holder" my-holder="holder.js/640x480/auto/black" class="img-responsive center-block" alt="Generic placeholder thumbnail"/>
                                 </div>
                                 <br/>
-                                <button class="btn btn-primary" type="submit" ng-click="callUserByPhone()">Call This Patient's Phone</button>
+                                <button class="btn btn-primary" type="submit" ng-click="callUserByPhone(appt.patientDetailsWF.patientPhone)">Call This Patient's Phone</button>
                                 <button class="btn btn-danger" type="submit" ng-click="stopPhoneCall()">Disconnect Call</button>
                                 <div/>
                             </div>
