--- a/client/app/pgm/default_landing/index.html
+++ b/client/app/pgm/default_landing/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/bower_components/html5-boilerplate/css/main.css">
     <!-- <link rel="stylesheet" href="app.css"> -->
     <script src="/bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
-    <title>Repeat Consultation Online</title>
+    <title>Remedy Square</title>
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/carousel.css" rel="stylesheet">
