landing page problem fixed and links been given to privacy, terms and all

--- a/client/app/pgm/default_landing/index.html
+++ b/client/app/pgm/default_landing/index.html
@@ -30,33 +30,6 @@
 					<img src="img/resources/" alt="Awesome Image"/>
 				</a>
 			</div>
-			<div class="header-right-info pull-right clearfix">
-				<div class="single-header-info">
-					<div class="icon-box">
-						<div class="inner-box">
-							<i class="flaticon-interface"></i>
-						</div>
-					</div>
-					<div class="content">
-						<h3>EMAIL</h3>
-						<p>companyname@mail.com</p>
-					</div>
-				</div>
-				<div class="single-header-info">
-					<div class="icon-box">
-						<div class="inner-box">
-							<i class="flaticon-telephone"></i>
-						</div>
-					</div>
-					<div class="content">
-						<h3>Call Now</h3>
-						<p><b>(000) 000-000-000</b></p>
-					</div>
-				</div>
-				<div class="single-header-info">
-					<a href="" class="thm-btn">Appointment</a>
-				</div>
-			</div>
 		</div>
 	</header> <!-- /.header -->
 
@@ -69,18 +42,12 @@
 						<li class="dropdown">
 							<a href="#">Home</a>
 						</li>
-						<li><a href="">About</a></li>						
 						<li>
-							<a href="">Services</a>
-						</li>
-						<li>
-							<a href="">Doctors</a>
-						</li>
-						<li>
-							<a href="#">FAQ</a>
+							<a href="/user/index.html#/user/help">FAQ</a>
 						</li>
 						<li><a href="">Contact Us</a></li>
-						<li><a href="">Login</a></li>
+						<li><a href="/user/index.html#/user/login">Login</a></li>
+						<li><a href="/user/index.html#/user/registration">Register</a></li>
 					</ul>
 				</div>
 				<div class="nav-footer">
@@ -400,6 +367,28 @@
 		</div>
 	</section>
 
+	<section class="offer-wrapper">
+		<div class="has-overlay">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6">
+						<div class="single-offer left">
+							<h3>Video Consultation <span>Make Video Chat</span></h3>
+							<p>Don't Worry ! Book Appointment and Consult With Your Doctors Through Video Chat, Better Experience Then Skype.</p>
+							<a href="#" class="thm-btn">Book Now</a>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="single-offer right">
+							<h3>Audio Consultation</h3>
+							<p>Book An Appointment With Your Doctor and They Will Call You Through Mobile</p>
+							<a href="#">Book Now <i class="fa fa-angle-double-right"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section class="sec-padding testimonials-wrapper">
 		<div class="container">
 			<div class="sec-title colored text-center">
@@ -567,20 +556,6 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-md-2">
-					<div class="footer-widget quick-links">
-						<h3 class="title">Services</h3>
-						<ul>
-							<li><a href="service-details.html">Dental</a></li>
-							<li><a href="service-details.html">Cadilogy</a></li>
-							<li><a href="service-details.html">Neurology</a></li>
-							<li><a href="service-details.html">Bond Bindin</a></li>
-							<li><a href="service-details.html">X-Ray</a></li>
-							<li><a href="service-details.html">Pregency</a></li>
-							<li><a href="service-details.html">Heart Dieases</a></li>
-						</ul>
-					</div>
-				</div>
 				<div class="col-md-4">
 					<div class="footer-widget contact-widget">
 						<h3 class="title">Contact Form</h3>
@@ -595,6 +570,12 @@
 			</div>
 		</div>
 	</footer>
+	
+	<section class="footer-bottom">
+		<div class="container text-center">
+			<p> © Copyright 2016 Remedy square <a href="/policy/privacy.html">Privacy</a> | <a href="/policy/utc.html">Terms</a> | <a href="/pgm/provider_landing/index.html">Are You Doctor?</a></p>
+		</div>
+	</section>
 
 
 	<!-- main jQuery -->
