--- a/client/app/user/index.html
+++ b/client/app/user/index.html
@@ -26,7 +26,15 @@
     <!-- Custom styles for this template -->
     <link href="provider.css" rel="stylesheet">
     <!-- <link href="css/carousel.css" rel="stylesheet"> -->
-
+	
+	<!-- master stylesheet -->
+	<link rel="stylesheet" href="css/style.css">
+	<!-- responsive stylesheet -->
+	<link rel="stylesheet" href="css/responsive.css">
+    <link rel="icon" href="../../favicon.ico">
+    <title>Remedy Square</title> 
+  
+</head>
 
 </head>
 
