--- a/client/app/pgm/default_landing/index.html
+++ b/client/app/pgm/default_landing/index.html
@@ -276,8 +276,10 @@
         <!-- FOOTER -->
         <footer>
             <p class="pull-right"><a href="#">Back to top</a></p>
-            <p>&copy; M/P Labs, 2015 &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
-                &middot; <a href="/pgm/provider_landing/index.html"> Are you a Doctor?</a>
+            <p>&copy; M/P Labs, 2015 &middot; 
+                <a target="_blank" href="/policy/privacy.html">Privacy</a> &middot; 
+                <a target="_blank" href="/policy/utc.html">Terms</a> &middot; 
+                <a href="/pgm/provider_landing/index.html"> Are you a Doctor?</a>
             </p>
         </footer>
     </div>
