fixed mostly UI related issues

--- a/client/app/provider/croom/croom.html
+++ b/client/app/provider/croom/croom.html
@@ -53,7 +53,7 @@
                             
                         </div>
                         <div class="col-sm-4">
-                            <div class="panel panel-default">
+                            <!-- <div class="panel panel-default">
                               <div class="panel-body">
                                 Message Board
                               </div>
@@ -65,7 +65,7 @@
                                       </span>
                                     </div>                                  
                               </div>
-                            </div>
+                            </div> -->
                             <hr/>
                             <div id="video_container_local">
                                 <img id="video_local_holder" my-holder="holder.js/320x240/auto/black" class="img-responsive center-block" alt="Generic placeholder thumbnail"/>
