--- a/client/app/provider/dashboard/appt_view.html
+++ b/client/app/provider/dashboard/appt_view.html
@@ -55,9 +55,10 @@
                         <button type="button" class="btn btn-danger" ng-show="appt | cwfStateTransitionAllowed : 'apptRescheduleByProvider' " data-animation="am-fade-and-slide-top" data-template="reschedule3.html" data-title="Suggest Reschedule to another time" data-content="{'title':'blah blah'}" bs-modal="appt">Reschedule2</button>
 
                     </div>
-                    <div class="btn-group btn-group-xs pull-right" role="group" aria-label="...">
+                    <!-- Commenting this out because we are not allowing doctors to cancel patient's appointment-->
+                    <!-- <div class="btn-group btn-group-xs pull-right" role="group" aria-label="...">
                         <button type="button" class="btn btn-default" ng-click="cancelAppt(appt)" ng-show="appt | cwfStateTransitionAllowed : 'apptCancelByProvider' ">Cancel</button>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
